# gazebo_tutorial

./: CMakeLists.txt  README.md  docker-compose.yml
.devcontainer/: Dockerfile  Dockerfile.humble  devcontainer.json  post_start_script.sh
include/: JointControlDemoPlugin.hh  LinkControlPlugin.hh  SimpleModelPlugin.hh
models/gimbal_small_2d/: model.sdf
models/iris_ardupilot_with_gimbal/: model.sdf
models/rrbot/: model.sdf
models/simple_box/: model.config  model.sdf
models/stand/: model.config  model.sdf
models/stand_with_gimbal/: model.config  model.sdf
resources/arrow/materials/scripts/: arrow.material
scripts/: env.sh
src/: ArduCopterPlugin.cc  ArduPilotPlugin.cc  CMakeLists.txt  GimbalSmall2dPlugin.cc  JointControlDemoPlugin.cc  LinkControlPlugin.cc  NodeDemoPlugin.cc  RangeSensorPlugin.cpp  RosNodeDemoPlugin.cc
worlds/: gimbal_testbench.world  imu_demo.world  iris_of.world  rrbot.world  simple.world
